# freeflow

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindFilesystem.cmake
experimental/: CMakeLists.txt
experimental/threading/: CMakeLists.txt  affinity_example.c
flowcap/: CMakeLists.txt  expect.cpp  fetch.cpp  forward.cpp  main.cpp  replay.cpp
flowpath/: CMakeLists.txt  action.cpp  action.hpp  application.cpp  application.hpp  application_library.cpp  application_library.hpp  binding.hpp  buffer.cpp  buffer.hpp  context.cpp  context.hpp  dataplane.cpp  dataplane.hpp  flow.cpp  flow.hpp  instruction.cpp  instruction.hpp  nbi.cpp  nbi.hpp  packet.cpp  packet.hpp  perceptron.hpp  port.cpp  port.hpp  port_drop.hpp  port_flood.cpp  port_flood.hpp  port_odp.cpp  port_odp.hpp  port_pcap.cpp  port_pcap.hpp  port_table.cpp  port_table.hpp  port_tcp.cpp  port_tcp.hpp  port_udp.cpp  port_udp.hpp  queue.cpp  queue.hpp  (+17 more)
flowpath/app-lib/: CMakeLists.txt  action.cpp  action.hpp  binding.hpp  endian.hpp  libsteve.cpp  libsteve.hpp
flowpath/apps/: CMakeLists.txt
flowpath/apps/hub/: hub.cpp
flowpath/apps/wire/: CMakeLists.txt  wire.c  wire.cpp  wire.hpp  wire.ll
flowpath/drivers/: CMakeLists.txt
flowpath/drivers/hub/: CMakeLists.txt  hub.cpp
flowpath/drivers/pcap/: CMakeLists.txt  cache_sim.cpp  cache_sim.hpp  caida-pcap.cpp  caida-pcap.h  caida-pcap.hpp  flow-count.cpp  flow-link.cpp  flow-min.cpp  flow-records.cpp  global_config.cpp  global_config.hpp  pcap-test.cpp  sim_lru.cpp  sim_lru.hpp  sim_min.cpp  sim_min.hpp  sim_opt.cpp  sim_opt.hpp  util_caida.cpp  util_caida.hpp  util_container.hpp  util_extract.cpp  util_extract.hpp  util_features.cpp  util_features.hpp  util_io.cpp  util_io.hpp  util_stats.cpp  util_stats.h  util_stats.hpp
flowpath/drivers/sample/: CMakeLists.txt  app.cpp  sample.hpp
flowpath/drivers/wire/: CMakeLists.txt  wire-odp.cpp  wire-tcp.cpp  wire-udp.cpp  wire.cpp
flowpath/lang/: CMakeLists.txt  README.md  app_context.cpp  app_context.hpp  app_context.ipp  builtin.cpp  builtin.hpp  include.hpp
flowpath/nbi/: CMakeLists.txt  main.cpp  nbi.cpp  nbi.hpp  sbi.ll
flowpath/tests/: CMakeLists.txt
flowpath/tests/ports/: CMakeLists.txt
flowpath/tests/threading/: CMakeLists.txt  pool.cpp  thread.cpp
flowpath/wstp/: CMakeLists.txt  wstp.cpp  wstp.hpp  wstp_link.cpp  wstp_link.hpp  wstp_server.cpp  wstp_server.hpp
fp-lite/: CMakeLists.txt  action.cpp  action.hpp  application.cpp  application.hpp  binding.cpp  binding.hpp  buffer.cpp  buffer.hpp  context.cpp  context.hpp  dataplane.cpp  dataplane.hpp  endian.hpp  flow.cpp  flow.hpp  packet.cpp  packet.hpp  port.cpp  port.hpp  port_drop.cpp  port_drop.hpp  port_flood.hpp  port_table.cpp  port_table.hpp  port_tcp.cpp  port_tcp.hpp  port_udp.cpp  port_udp.hpp  queue.cpp  queue.hpp  system.cpp  system.hpp  table.cpp  table.hpp  thread.cpp  thread.hpp  time.hpp  types.hpp
fp-lite/apps/: CMakeLists.txt
fp-lite/apps/hub/: CMakeLists.txt  hub.hpp
fp-lite/apps/nop/: CMakeLists.txt  nop.c
fp-lite/apps/wire/: CMakeLists.txt  wire.c
fp-lite/apps/wire-old/: CMakeLists.txt
fp-lite/drivers/: CMakeLists.txt
fp-lite/drivers/endpoint/: CMakeLists.txt  endpoint.cpp
fp-lite/drivers/firewall/: CMakeLists.txt  firewall.cpp
fp-lite/drivers/hub/: CMakeLists.txt  hub.cpp
fp-lite/drivers/slurp/: CMakeLists.txt  README.md  slurp-st-select.cpp  slurp-st-seq.cpp  slurp.cpp
fp-lite/drivers/wire/: CMakeLists.txt  README.md  wire-epoll-sta.cpp  wire-epoll-tpp.cpp  wire-epoll.cpp  wire-mt-seq.cpp  wire-poll.cpp  wire-select-mt.cpp  wire-select-st.cpp  wire-select.cpp  wire-st-select.cpp  wire.cpp
fp-lite/tests/: CMakeLists.txt
fp-lite/tests/ports/: udp.cpp
fp-lite/tests/threading/: pool.cpp  thread.cpp
freeflow/: CMakeLists.txt  async.cpp  async.hpp  capture.cpp  capture.hpp  cli.cpp  cli.hpp  epoll.cpp  epoll.hpp  format.cpp  format.hpp  ip.cpp  ip.hpp  json.cpp  json.hpp  memory.cpp  memory.hpp  poll.cpp  poll.hpp  select.cpp  select.hpp  socket.cpp  socket.hpp  system.cpp  system.hpp  time.hpp  unix.cpp  unix.hpp
freeflow/examples/: CMakeLists.txt
freeflow/examples/capture/: reader.cpp
freeflow/examples/unix-sockets/: echo-server.cpp
freeflow/test/: CMakeLists.txt  json-bench.cpp  json-parse.cpp  json.cpp
notes/: Makefile  extract2.c  fix-mathematica-wstp.bash  key.h  main-dl.c  noproto_interface.txt  noproto_psudo_assembly.md  test_packets.h  util.h
scripts/: extract-flow.sh  sink.sh  traffic.sh
scripts/eval_tests/: endpoint.sh  firewall.sh  wire.sh
scripts/eval_tests/input/: makeBiggerFlows.bash
scripts/topology/bridge/: setup.sh  teardown.sh
scripts/topology/netmap/bridge/: setup.sh  teardown.sh
scripts/topology/netmap/veth_uut/: setup.sh  teardown.sh
scripts/topology/ovsswitch/: ryu_setup.sh  setup.sh  teardown.sh
scripts/topology/uut/: setup.sh  teardown.sh
scripts/topology/wire/: setup.sh  teardown.sh
scripts/wire/: iperf_bridge.sh  setup_bridge.sh  teardown_bridge.sh  wire_bridge.sh  wire_local.sh  wire_sink.sh  wire_source.sh  wire_sta.sh  wire_tpp.sh  wire_veth.sh
util/: CMakeLists.txt
util/echo/: CMakeLists.txt  client.cpp  echo.cpp  input.cpp  out.pcap  server.cpp  socket.cpp  socket.hpp  traffic.sh
util/echo_server/: CMakeLists.txt  echo_client.c  echo_server.c
util/flowcap/: main.cpp
util/traffic/: CMakeLists.txt  input.cpp  socket.hpp
